Add sidebar, sidepanel, alert

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -14,3 +14,21 @@
   flex: 1;
   padding: 16px;
 }
+
+.fade-enter {
+  opacity: .001;
+}
+
+.fade-enter.fade-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+}
+
+.fade-leave {
+  opacity: 1;
+}
+
+.fade-leave.fade-leave-active {
+  opacity: .001;
+  transition: opacity 500ms ease-in;
+}
