--- a/public/font/font.css
+++ b/public/font/font.css
@@ -1,19 +1,24 @@
 @font-face {
   font-family: 'Gotham-Medium';
-  src: url('GothamMedium.eot');
-  src: url('Gotham-Medium.woff') format('woff'),
-       url('GothamMedium.woff2') format('woff2'),
+  src: url('Gotham-Medium.eot');
+  src: url('Gotham-Medium.woff2') format('woff2'),
+       url('Gotham-Medium.woff') format('woff'),
        url('Gotham-Medium.ttf') format('truetype'),
-       url('GothamMedium.eot?#iefix') format('embedded-opentype'),
-       url('Gotham-Medium.svg#Gotham-Medium') format('svg');
+       url('Gotham-Medium.svg#Gotham-Medium') format('svg'),
+       url('Gotham-Medium.eot?#iefix') format('embedded-opentype');
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
   font-family: 'Gotham-Book';
-  src: url('GothamBook.eot');
-  src: url('Gotham-Book.woff') format('woff'),
-       url('GothamBook.woff2') format('woff2'),
+  src: url('Gotham-Book.eot');
+  src: url('Gotham-Book.woff2') format('woff2'),
+       url('Gotham-Book.woff') format('woff'),
        url('Gotham-Book.ttf') format('truetype'),
-       url('GothamBook.eot?#iefix') format('embedded-opentype'),
-       url('Gotham-Book.svg#Gotham-Book') format('svg');
+       url('Gotham-Book.svg#Gotham-Book') format('svg'),
+       url('Gotham-Book.eot?#iefix') format('embedded-opentype');
+  font-weight: normal;
+  font-style: normal;
 }
+
