--- a/public/font/font.css
+++ b/public/font/font.css
@@ -22,3 +22,26 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'Gotham-Bold';
+  src: url('Gotham-Bold.eot');
+  src: url('Gotham-Bold.woff2') format('woff2'),
+       url('Gotham-Bold.woff') format('woff'),
+       url('Gotham-Bold.ttf') format('truetype'),
+       url('Gotham-Bold.svg#Gotham-Bold') format('svg'),
+       url('Gotham-Bold.eot?#iefix') format('embedded-opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Giro-Light';
+  src: url('Giro-Light.eot');
+  src: url('Giro-Light.woff2') format('woff2'),
+       url('Giro-Light.woff') format('woff'),
+       url('Giro-Light.ttf') format('truetype'),
+       url('Giro-Light.svg#Giro-Light') format('svg'),
+       url('Giro-Light.eot?#iefix') format('embedded-opentype');
+  font-weight: normal;
+  font-style: normal;
+}
